<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_xx_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_medium"
        android:fitsSystemWindows="true"
        >

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_close"
            android:visibility="visible"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="@dimen/margin_xx_small"
            android:contentDescription="@string/close_button"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/picture_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                style="@style/HeaderTextStyle"
                android:hint="@string/picture_header"
                />

            <TextView
                android:id="@+id/picture_partOfSpeech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                style="@style/HeaderTextStyle"
                android:hint="@string/picture_partOfSpeech"
                />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ProgressBar
                android:id="@+id/loading_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_medium"
                android:layout_gravity="center"
                />

            <gb.com.utils.network.EquilateralImageView
                android:id="@+id/picture_imageview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/no_photo_vector"
                android:visibility="visible"
                android:contentDescription="@string/picture_stub"
                />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>